# depth_completion_with_diffusion

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  dataset.txt  environment.yaml  pyproject.toml  requirements.txt  setup.py
benchmarking/: README.md  benchmarking_eval.ipynb  common.yaml  utils.py
conditional_diffusion/: README.md  advanced_dms.ipynb  config.py  custom_diffusion_model.ipynb  custom_imagen_pytorch.py  custom_trainer.py  custom_trainer_ssl.py  data-exp-ssl.ipynb  data-exp.ipynb  debug.ipynb  debug.py  diffusers_exp.ipynb  eval_batch_meta.json  eval_batch_utils.py  fashion_mnist.ipynb  fine-tuning-005_cfg.exp_targets=['cond_scale'].ipynb  fine-tuning-006_cfg.exp_targets=['cond_scale'].ipynb  fine-tuning-007_cfg.exp_targets=['cond_scale'].ipynb  fine-tuning-008_cfg.exp_targets=['cond_scale'].ipynb  fine-tuning-114_cfg.exp_targets=['interp_cond_img'].ipynb  fine-tuning-115_cfg.exp_targets=['interp_cond_img']-2.ipynb  fine-tuning-115_cfg.exp_targets=['interp_cond_img'].ipynb  fine-tuning-no-text-embed.ipynb  fine-tuning.ipynb  fitting_stable_diffusion.ipynb  full_forward_path_kbnet.ipynb  hyperparams.txt  image_encoder.ipynb  imagen_original.ipynb  img_utils.py  isdm_cond_rgb_and_sdm.ipynb  kitti_sample.ipynb  load_data.py  load_data_base.py  load_data_kitti.py  model.py  perturb_sparse_dm.ipynb  run_nbs.py  sdm_exp.ipynb  ssl_utils.py  (+8 more)
configs/: eval.yaml  train.yaml
notebooks/: annotated_diffusion.ipynb  fitting_stable_diffusion.ipynb  port_ckpts_to_lit.ipynb
rsl_depth_completion/: README.md  eval.py  logger.py  metrics.py  train.py  (+1 more)
(+128 files in other folders)
